Fix ui to make scrollbar visible

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@ body {
 
 .appContainer{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
 }
 
